# CPP-Editor

./: .dockerignore  BorderRenderer.h  CMakeLists.txt  CPPEditor.cpp  CPPEditor.h  Content.cpp  Content.h  Dockerfile  EdgeDimensions.h  LineBorderRenderer.cpp  LineBorderRenderer.h  Project.md  README.md  RecursiveWindow.cpp  RecursiveWindow.h  TestWindow.cpp  TestWindow.h  Window.cpp  Window.h  main.cpp  makefile  run.bat
TestArea/: file2  pythonScript.py
TestArea/Directory1/: JokeTeller.py  jokes.txt
include/BorderRenderers/: BorderRenderer.h  MenuItem.h  SimpleBorderRenderer.h
include/IO/: FileIO.h  KeyEvent.h  TerminalIO.h
include/Util/: Container2D.h  Container4D.h  Content.h  StringUtils.h  Vector2D.h  Vector4D.h
include/Windows/: EditorWindow.h  FileExplorerWindow.h  RecursiveWindow.h  TerminalWindow.h  TestWindow.h  Window.h  WindowDimensions.h
src/BorderRenderers/: MenuItem.cpp  SimpleBorderRenderer.cpp
src/IO/: FileIO.cpp  TerminalIO.cpp
src/Util/: Content.cpp  StringUtils.cpp  Vector2D.cpp
src/Windows/: EditorWindow.cpp  FileExplorerWindow.cpp  RecursiveWindow.cpp  TerminalWindow.cpp  TestWindow.cpp  Window.cpp  WindowDimensions.cpp
